--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ ws.onmessage = function (event) {
    ws.send('Hi')
 }">
  Test with: <a href="https://www.websocket.org/echo.html">https://www.websocket.org/echo.html</a> 
-   remember to use  <br><br>wss://node-ws-test-jerteach.c9.io<br><br> in the box<br>
+   remember to use  <br><br>wss://your-cloud9-c9.io<br><br> in the box<br>
 
 <h1>Sent every 4 s</h1>
 <div id="myDiv1">  here<br>  </div>
