--- a/activation.html
+++ b/activation.html
@@ -46,7 +46,7 @@ function myStop(myValue){     // simplifies sending info to the photon
 
   
 
-<h2 align=center><a href="http://particle.io" >Particle.io web page control of the Core or Photon using a hacked websocket.<br> Not very secure but it works </h2>
+<h2 align=center><a href="http://particle.io" >Particle.io</a> web page control of the Core or Photon using a hacked websocket.<br> Not very secure but it works </h2>
 
 
 
