--- a/activation.html
+++ b/activation.html
@@ -48,9 +48,9 @@ function myStop(myValue){     // simplifies sending info to the photon
 
 <h2 align=center><a href="http://particle.io" >Particle.io</a>  web page control of the Core or Photon using a hacked websocket.<br> Not very secure but it works </h2>
 
+The core D7 LED should light for 25 seconds and then turn off. Then Click the connect button and the D7 LED should light. After that the nodeJS server should communicate with your Photon
 
-
-Type in the boxes then click the buttons to activate your Photon.<br><br>
+Type in the boxes then click the buttons to activate your Photon websocket to a node js server.<br><br>
 
 
 
@@ -100,7 +100,7 @@ Get this from the settings area when logged into <a href="http://spark.io">http:
 
 
 
-Note: The several hidden items on this webpage must remain on the webpage. Change type=hidden to type=text if you wish to see them. Your Core or 
+Note: The several hidden items on this webpage must remain on the webpage. Change type=hidden to type=text if you wish to see them.<br> 
 
 
 Use at your own risk, by Jeremy Ellis<br>
