--- a/activation.html
+++ b/activation.html
@@ -81,14 +81,27 @@ Get this from the settings area when logged into <a href="http://spark.io">http:
 
 <br><br>
 
-<input type="button" value="connect" onClick="{
+<input type="button" value="Connect to the Photon" onClick="{
     myConnect('');
 }">
 
 
-<input type="button" value="stop" onClick="{
+<input type="button" value="Stop connection" onClick="{
     myStop('');
 }">
+
+
+<br>
+
+<input type=button value="index.html" onclick="{
+     location = 'index.html'
+ }">  
+    
+
+<input type=button value="car-control.html" onclick="{
+     location = 'car-control.html'
+ }">  
+    
 
 
 <br><br>
