--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ if (myIncoming == 'E'){ RGB.brightness(250); }
 </textarea>
 
    
-  
+    <a href="car-control.html">car-control.html</a>  <br>
 
 Note: The several hidden items on this webpage must remain on the webpage. Change type=hidden to type=text if you wish to see them.<br> 
 
