--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ Use this to test new controls flashed to the Photon
    
     
 <br><br><br><br>  
-<h1>C ping Sent every 4 s</h1>
+<h1>C ping Sent every 12 seconds</h1>
 <div id="myDiv1">  here<br>  </div>
   
    
